--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "styled-components": "^5.3.3",
+    "svgo": "^2.8.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
